# saucebrush

./: .travis.yml  LICENSE  pyproject.toml  requirements.txt  saucebrush.kpf  setup.py
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst
examples/: earmarkwatch.py  fec_cobol.py  fec_electronic.py  sopr_lobbyists.py  tables.sql  test-splitter.py
saucebrush/: __init__.py  emitters.py  filters.py  sources.py  stats.py  utils.py
saucebrush/tests/: __init__.py  emitters.py  filters.py  recipes.py  sources.py  stats.py
src/saucebrush/: __init__.py  emitters.py  filters.py  sources.py  stats.py  utils.py
tests/: recipes.py  sources.py  test_emitters.py  test_filters.py  test_recipes.py  test_sources.py  test_stats.py
